--- a/demo/blankin.html
+++ b/demo/blankin.html
@@ -4,16 +4,16 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>jQueryMobile - SimpleDialog2 Demos</title>
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
-	<link type="text/css" href="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog.min.css" rel="stylesheet" /> 
-	<link type="text/css" href="http://dev.jtsage.com/jQM-DateBox/css/demos.css" rel="stylesheet" /> 
+	<link rel="stylesheet" href="./jq5/jquery.mobile-1.5.0-rc1.min.css">
+	<link type="text/css" href="../src/css/jquery.mobile.simpledialog.css" rel="stylesheet" /> 
+	
 	
 	<!-- NOTE: Script load order is significant! -->
 	
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
-	<script type="text/javascript" src="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog2.js"></script>
-	<script type="text/javascript" src="http://dev.jtsage.com/jQM-SimpleDialog/demos2/extras.js"></script>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+	<script src="./jq5/jquery.mobile-1.5.0-rc1.min.js"></script>
+	<script type="text/javascript" src="../src/js/jquery.mobile.simpledialog2.js"></script>
+	<script type="text/javascript" src="./extras.js"></script>
 
 	
 	<script type="text/javascript" src="http://dev.jtsage.com/gpretty/prettify.js"></script>
@@ -95,7 +95,7 @@ $(document).delegate('#opendialog', 'click', function() {
 						<input type="radio" name="selectedLanguage" id="selectedLanguageEnglsih" value="en" />
 						<label for="selectedLanguageEnglsih">English</label>
 						<input type="radio" name="selectedLanguage" id="selectedLanguageSpanish" value="es" />
-						<label for="selectedLanguageSpanish">Español</label>
+						<label for="selectedLanguageSpanish">Espaï¿½ol</label>
 					</fieldset>
 					<a rel='close' data-role='button' href='#'> Close </a>
 				</div>
@@ -114,7 +114,7 @@ $(document).delegate('#opendialog', 'click', function() {
       &lt;input type="radio" name="selectedLanguage" id="selectedLanguageEnglsih" value="en" /&gt;
       &lt;label for="selectedLanguageEnglsih"&gt;English&lt;/label&gt;
       &lt;input type="radio" name="selectedLanguage" id="selectedLanguageSpanish" value="es" /&gt;
-      &lt;label for="selectedLanguageSpanish"&gt;Español&lt;/label&gt;
+      &lt;label for="selectedLanguageSpanish"&gt;Espaï¿½ol&lt;/label&gt;
     &lt;/fieldset&gt;
     &lt;a rel='close' data-role='button' href='#'&gt; Close &lt;/a&gt;
   &lt;/div&gt;
