--- a/demo/install.html
+++ b/demo/install.html
@@ -4,16 +4,16 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>jQueryMobile - SimpleDialog2 Demos</title>
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
-	<link type="text/css" href="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog.min.css" rel="stylesheet" /> 
-	<link type="text/css" href="http://dev.jtsage.com/jQM-DateBox/css/demos.css" rel="stylesheet" /> 
+	<link rel="stylesheet" href="./jq5/jquery.mobile-1.5.0-rc1.min.css">
+	<link type="text/css" href="../src/css/jquery.mobile.simpledialog.css" rel="stylesheet" /> 
+	
 	
 	<!-- NOTE: Script load order is significant! -->
 	
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
-	<script type="text/javascript" src="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog2.js"></script>
-	<script type="text/javascript" src="http://dev.jtsage.com/jQM-SimpleDialog/demos2/extras.js"></script>
+	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+	<script src="./jq5/jquery.mobile-1.5.0-rc1.min.js"></script>
+	<script type="text/javascript" src="../src/js/jquery.mobile.simpledialog2.js"></script>
+	<script type="text/javascript" src="./extras.js"></script>
 
 	
 	<script type="text/javascript" src="http://dev.jtsage.com/gpretty/prettify.js"></script>
@@ -41,7 +41,7 @@
 		</dl>
 		<dl>
 			<dt>Download Links - Current Version (hotlinking allowed)</dt>
-			<dd><a rel="external" href="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog2.js">Uncompressed, Development Version Plugin</a></dd>
+			<dd><a rel="external" href="../src/js/jquery.mobile.simpledialog2.js">Uncompressed, Development Version Plugin</a></dd>
 			<dd><a rel="external" href="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog.css">Uncompressed, Development CSS Styles</a></dd>
 			<dd><br /><a rel="external" href="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog2.min.js">Compressed, Production Version Plugin</a></dd>
 			<dd><a rel="external" href="http://dev.jtsage.com/cdn/simpledialog/latest/jquery.mobile.simpledialog.min.css">Compressed, Production CSS Styles</a></dd>
