--- a/demo/fullscreen.html
+++ b/demo/fullscreen.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>jQueryMobile - SimpleDialog2 Demos</title>
-	<link rel="stylesheet" href="./jq5/jquery.mobile-1.5.0-rc1.min.css">
+	<!-- <link rel="stylesheet" href="./jq5/jquery.mobile-1.5.0-rc1.min.css"> -->
 	<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
 	<link type="text/css" href="../src/css/jquery.mobile.simpledialog.css" rel="stylesheet" /> 
 	
@@ -13,6 +13,7 @@
 	
 	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	<script src="./jq5/jquery.mobile-1.5.0-rc1.min.js"></script>
+	<script src="../src/js/jquery.mobile.polyfill.js"></script>
 	<script type="text/javascript" src="../src/js/jquery.mobile.simpledialog2.js"></script>
 	<script type="text/javascript" src="./extras.js"></script>
 
@@ -20,9 +21,9 @@
 	<script type="text/javascript" src="http://dev.jtsage.com/gpretty/prettify.js"></script>
 	<link type="text/css" href="http://dev.jtsage.com/gpretty/prettify.css" rel="stylesheet" />
 	<script type="text/javascript">
-		$('div').live('pagecreate', function() {
-			prettyPrint()
-		});
+		// $('div').live('pagecreate', function() {
+		// 	prettyPrint()
+		// });
 	</script>
 	
 </head>
